<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="248dp"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/index_drawer_string10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/index_drawer_string4"
        android:textColor="#000000"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/index_drawer_textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="96dp"
        android:lineSpacingExtra="-1sp"
        android:textColor="#999999"
        android:textSize="17sp"
        tools:text="13501287916" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="136dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:id="@+id/index_drawer_linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/default_favorite"
            android:contentDescription="@string/index_drawer_string5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:lineSpacingExtra="0sp"
            android:text="@string/index_drawer_string6"
            android:textColor="#000000"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="198dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/index_drawer_textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="224dp"
        android:paddingStart="32dp"
        android:text="@string/index_drawer_string7"
        android:textColor="#000000"
        android:textSize="17sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/index_drawer_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:paddingStart="32dp"
        android:text="@string/index_drawer_string8"
        android:textColor="#000000"
        android:textSize="17sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="372dp"
        android:lineSpacingExtra="9sp"
        android:text="@string/index_drawer_string9"
        android:textColor="#000000"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="452dp"
        android:background="@drawable/erweima" />


</RelativeLayout>