<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="165.6dp"
        android:layout_height="115.2dp">

        <ImageView
            android:id="@+id/index_rcv_imageview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/index_act_string21"
            android:scaleType="fitXY"
            tools:src="@drawable/nursery" />

        <ImageView
            android:id="@+id/index_rcv_imageview2"
            android:layout_width="55dp"
            android:layout_height="24dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/index_act_string22"
            android:src="@drawable/to_be_audited"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/index_rcv_imageview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/file_download_material"
                android:contentDescription="@string/index_act_string24" />

            <TextView
                android:id="@+id/index_rcv_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:textColor="#ffffff"
                android:textSize="21sp"
                tools:text="点击下载" />


        </LinearLayout>

        <ImageView
            android:id="@+id/index_rcv_imageview4"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="end"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/index_act_string25"
            android:src="@drawable/favorite"
            android:visibility="gone" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/index_rcv_textview2"
        android:layout_width="165.6dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textColor="#333333"
        android:textSize="15sp"
        tools:text="阳光盒子小蝌蚪" />
</LinearLayout>