<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/index_act_coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/index_act_toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#ffffff"
            android:elevation="5dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/index_act_imagebuttton1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerVertical="true"
                    android:background="#00ffffff"
                    android:contentDescription="@string/index_act_string8"
                    android:src="@drawable/ic_menu_black_24dp" />

                <TextView
                    android:id="@+id/index_act_textview10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="72dp"
                    android:text="@string/index_act_string7"
                    android:textColor="#000000"
                    android:textSize="21sp" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/index_act_tablayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <View
                    android:id="@+id/index_act_view1"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="17dp"
                    android:background="#e6e6e6" />

                <TextView
                    android:id="@+id/index_act_textview11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="33dp"
                    android:text="@string/index_act_string20"
                    android:textColor="#333333"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/index_act_imageview10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="83dp"
                    android:background="@drawable/refresh" />


            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.v4.view.ViewPager
            android:id="@+id/index_act_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>